newclay/test/Compiler/Propagation/Fail/ReturnCountMismatch2/main.clay
main() {
    if (true)
        return 1, '2';
    else
        return 1;
}
